# transcript-scorer

./: .gitignore  README.md  app.py  pyproject.toml
agents/: orchestrator.py  rubric_formatter.py  scorer.py
api/: main.py  models.py
data/: formatted_rubric.json
tools/: metrics_tools.py
utils/: file_parser.py  metrics_calculator.py  rubric_loader.py
